# tsurugi-udf

./: .clang-format  .gitignore  README.md  _codeql_detected_source_root
.github/: CODEOWNERS
udf-library/python/: README.md  pyproject.toml
udf-library/python/proto_build/: build.sh  client_build.sh
udf-library/python/tests/tsurugidb/udf/: test_protobuf_compatibility.py
udf-library/python/tsurugidb/udf/: __init__.py  tsurugi_types_pb2.py
udf-library/python/tsurugidb/udf/client/: __init__.py  client.py  factory.py
udf-library/python/tsurugidb/udf/converter/: converter.py
udf-library/python/tsurugidb/udf/model/: __init__.py  tsurugi_types_pb2.py
udf-plugin/: CMakeLists.txt  README.md  __init__.py  pyproject.toml
udf-plugin-builder/: CMakeLists.txt  README.md  generate.py  pyproject.toml
udf-plugin-builder/include/: descriptor_impl.h
udf-plugin-builder/proto/: complex_types.proto  primitive_types.proto  sample.proto
udf-plugin-builder/templates/: plugin_api_impl.cpp.j2  rpc_client.cpp.j2  rpc_client.h.j2  rpc_client_factory.cpp.j2
udf-plugin-builder/test/: CMakeLists.txt  README.md  inspect_plugin.cpp  run.sh
udf-plugin-builder/test/1113/server/: rpc_server.cpp
udf-plugin-builder/test/client/: client.cpp
udf-plugin-builder/test/include/: rpc_tasks.h  task_manager.h
udf-plugin-builder/test/load_another/: run.sh
udf-plugin-builder/test/load_another/proto/: sample.proto
udf-plugin-builder/test/load_another/result/: log.result
udf-plugin-builder/test/load_another/script/: test.sql
udf-plugin-builder/test/load_another/server/: rpc_server.cpp
udf-plugin-builder/test/nested_test/: run.sh
udf-plugin-builder/test/nested_test/client/: client.cpp
udf-plugin-builder/test/nested_test/proto/: complex_types.proto  nested_test.proto  sample.proto
udf-plugin-builder/test/nested_test/result/: log.result
udf-plugin-builder/test/nested_test/script/: test.sql
udf-plugin-builder/test/nested_test/server/: rpc_server.cpp
udf-plugin-builder/test/oneof_test/: run.sh
udf-plugin-builder/test/oneof_test/client/: client.cpp
udf-plugin-builder/test/oneof_test/proto/: oneof_test.proto  sample.proto
udf-plugin-builder/test/oneof_test/result/: log.result
udf-plugin-builder/test/oneof_test/server/: rpc_server.cpp
udf-plugin-builder/test/package_test/: run.sh
udf-plugin-builder/test/return_test/proto/: return.proto
udf-plugin-builder/test/return_test/server/: rpc_server.cpp
udf-plugin-builder/test/server/: rpc_server.cpp
udf-plugin-builder/test/src/: inspect_plugin.cpp  rpc_tasks.cpp  task_manager.cpp
udf-plugin-builder/test/unary_test/: run.sh
udf-plugin-builder/test/unary_test/client/: client.cpp
udf-plugin-builder/test/unary_test/inspect_plugin/: inspect_plugin.cpp  task_manager.cpp  task_manager.h
udf-plugin-builder/test/unary_test/proto/: test_all.proto
udf-plugin-builder/test/unary_test/result/: log.result
udf-plugin-builder/test/unary_test/script/: test.sql
udf-plugin-builder/test/unary_test/server/: rpc_server.cpp
udf-plugin-builder/tests/: test_basic.py
udf-plugin-builder/udf_plugin_builder/: build_with_cmake.py  generate.py
udf-plugin-builder/udf_plugin_builder/cmake/: CMakeLists.txt
udf-plugin-builder/udf_plugin_builder/templates/: rpc_client.cpp.j2  rpc_client.h.j2
udf-plugin-viewer/: CMakeLists.txt  README.md  bindings.cpp  pyproject.toml
udf-plugin-viewer/udf_plugin_viewer/: __init__.py  __main__.py
udf-plugin/builder/: README.md
udf-plugin/builder/test/: README.md
udf-plugin/builder/test/1113/script/: test.sql
udf-plugin/builder/test/load_another/: run.sh
udf-plugin/builder/test/nested_test/: run.sh
udf-plugin/builder/tests/: test_basic.py  test_types.py
udf-plugin/builder/udf_plugin_builder/: build_with_cmake.py  generate.py  ini_writer.py  object_schema.py  tsurugi_keywords.py  utils.py
udf-plugin/builder/udf_plugin_builder/cmake/: CMakeLists.txt
udf-plugin/builder/udf_plugin_builder/templates/: plugin_api_impl.cpp.j2
udf-plugin/common/tsurugi_udf_common/: descriptors.py
udf-plugin/tests/: conftest.py  test_builder_viewer_e2e.py
udf-plugin/tests/cpp/: dlopen_udf_plugin.cpp  generic_client_context.cpp  generic_client_context.h  list_udf_functions.cpp
udf-plugin/tests/data/: minimal.proto  multi_c.proto  multi_common_service.proto  oneof.proto  optional.proto  udf_stream.proto  well.proto
udf-plugin/tsurugi_udf/builder/: cli.py
udf-plugin/tsurugi_udf/builder/cli/: args.py  main.py  validate.py
udf-plugin/tsurugi_udf/builder/core/: analyze_rpcs.py  compile_common.py  compile_gen.py  compile_tpl.py  descriptor.py  errors.py  fs.py  gen_tpl.py  link_shared.py  log.py  paths.py  toolchain.py  validate_descriptor.py  verify_so.py  write_ini.py
udf-plugin/tsurugi_udf/builder/templates/: plugin_api_impl.cpp.j2  rpc_client.cpp.j2  rpc_client.h.j2  rpc_client_factory.cpp.j2
udf-plugin/tsurugi_udf/builder/tests/: test_basic.py  test_basic2.py
udf-plugin/tsurugi_udf/builder/udf_plugin_builder/: build_with_cmake.py  ini_writer.py  object_schema.py  tsurugi_keywords.py  utils.py
udf-plugin/tsurugi_udf/common/: pyproject.toml
udf-plugin/tsurugi_udf/viewer/: cli.py
udf-plugin/tsurugi_udf/viewer/udf_plugin_viewer/: __init__.py  bindings.cpp  cli.py
udf-plugin/viewer/: CMakeLists.txt  bindings.cpp  pyproject.toml
udf-plugin/viewer/udf_plugin_viewer/: __init__.py  cli.py  loader.py
udf_converter/: README.md  pyproject.toml
udf_converter/proto/: generate.py  tsurugi_types.proto
udf_converter/tests/: test_converter.py
udf_converter/udf_converter/: __init__.py  converter.py  tsurugi_types_c4c2090500a0eacbc6950e80b7923136_pb2.py  tsurugi_types_pb2.py
udf_library/: README.md  pyproject.toml
udf_library/proto_build/: build.sh  client_build.sh
udf_library/tsurugi/udf/client/: __init__.py  client.py  factory.py
udf_library/tsurugi/udf/converter/: __init__.py  converter.py
udf_library/tsurugidb/udf/: __init__.py
udf_library/tsurugidb/udf/client/: client.py
udf_library/tsurugidb/udf/converter/: converter.py
udf_library/tsurugidb/udf/model/: __init__.py
(+102 files in other folders)
