[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "udf-plugin-builder"
version = "0.1.0"
description = "UDF plugin builder for Tsurugi DB"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = [
  "tsurugi-udf-common>=0.1.0",
  "jinja2",
  "protobuf",
]

optional-dependencies.test = [
  "pytest>=7.0",
  "pytest-cov",
]

[project.scripts]
udf-plugin-builder = "udf_plugin_builder.build_with_cmake:main"

[tool.setuptools]
packages = ["udf_plugin_builder"]
include-package-data = true

[tool.setuptools.package-data]
udf_plugin_builder = ["templates/*", "cmake/*"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__"]

[project.urls]
Homepage = "https://github.com/project-tsurugi/tsurugi-udf"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --color=yes"
testpaths = [
  "tests",
]