[tool.scikit-build]
build-dir = "build"
wheel.packages = ["udf_plugin_viewer"]

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "17"

[project]
name = "udf-plugin-viewer"
version = "0.1.0"
description = "UDF plugin metadata viewer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["scikit-build-core", "pybind11", "ninja"]
build-backend = "scikit_build_core.build"
[project.scripts]
udf-plugin-viewer = "udf_plugin_viewer.__main__:main"
