# toml-sort -i pyproject.toml

[build-system]
requires = [
  "scikit-build-core>=0.11.6",
  "setuptools>=80.9.0",
  "wheel>=0.45.1",
  "pybind11>=3.0.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "tsurugi-udf"
# Note:
# When you update the version here, make sure to also update:
# 1. `tsurugi_udf/builder/udf_plugin_builder/object_schema.py`
# (OBJECT_SCHEMA_VERSION should match this version)
# 2. `SUPPORTED_MAJOR` and `SUPPORTED_MINOR` in
# `tsurugidb/jogasaki/src/jogasaki/executor/function/udf_functions.cpp`
version = "0.1.0"
description = "Tsurugi UDF plugin toolchain"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  "jinja2>=3.1.6",
  "protobuf>=6.31.1"
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2",
  "pytest-xdist>=3.8.0"
]

[project.scripts]
udf-plugin-builder = "tsurugi_udf.builder.cli:main"
udf-plugin-viewer = "tsurugi_udf.viewer.cli:main"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.verbose = true
wheel.packages = [
  "tsurugi_udf",
  "tsurugi_udf.builder",
  "tsurugi_udf.builder.udf_plugin_builder",
  "tsurugi_udf.viewer",
  "tsurugi_udf.viewer.udf_plugin_viewer",
  "tsurugi_udf.common",
  "tsurugi_udf.common.tsurugi_udf_common"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"tsurugi_udf.builder.udf_plugin_builder" = [
  "templates/*.j2",
  "cmake/**"
]
"tsurugi_udf.common.tsurugi_udf_common" = [
  "include/**/*",
  "src/**/*"
]
"tsurugi_udf.common.tsurugi_udf_common.cmake" = [
  "*.cmake"
]
