#ruff format pyproject.toml
[build-system]
requires = ["setuptools>=65.0.0", "wheel", "protobuf>=4.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsurugi-udf-library"
version = "0.1.0"
description = "Tsurugi UDF Python library (models + converter)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["protobuf>=4.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tsurugi*"]

[tool.setuptools]
include-package-data = true
zip-safe = false

