#ruff format pyproject.toml
[build-system]
requires = ["setuptools>=65.0.0", "wheel", "protobuf>=4.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsurugi-udf-library"
version = "0.1.0"
description = "Tsurugi UDF Python library (models + converter)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["protobuf>=4.0.0"]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["tsurugidb*"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true
zip-safe = false

