#ruff format pyproject.toml
[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1", "protobuf>=4.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsurugi-udf-library"
version = "0.1.1"
description = "Tsurugi UDF Python library"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = ["protobuf>=6.31.1"]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["tsurugidb*"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true
zip-safe = false
